# MT2D

./: .gitignore  Android.mk  CmakeList.txt  LICENSE  MT2D.cpp  MT2D.h  MT2D_Debug.cpp  MT2D_Display.cpp  MT2D_Display.h  MT2D_Keyboard.cpp  MT2D_Keyboard.h  MT2D_Layout.cpp  MT2D_Layout.h  MT2D_System_Calls.cpp  MT2D_System_Calls.h  MT2D_Terminal_Define.h  Object_(deprecated).cpp  Object_(deprecated).h  README.md  changelog.md  index.html
Audio/: MT2D_Audio_core.cpp  MT2D_Audio_core.h
Cursor/: Cursor.cpp  Cursor.h
Documentation/: Use Android Studio.txt
InputBox/: MT2D_InputBox_Integer.cpp  MT2D_InputBox_Integer.h  MT2D_InputBox_String.cpp  MT2D_InputBox_String.h
Joystick/: MT2D_Joystick.cpp
MT2D/: MT2D.cpp  MT2D.h  MT2D_Debug.cpp  MT2D_Debug.h  MT2D_Display.cpp  MT2D_Display.h  MT2D_File.h  MT2D_Keyboard.cpp  MT2D_Keyboard.h  MT2D_Layout.cpp  MT2D_System_Calls.cpp  MT2D_System_Calls.h  MT2D_Terminal_Define.h  README.md
MT2D/Audio/: MT2D_Audio_core.cpp  MT2D_Audio_core.h
MT2D/Container/: MT2D_Container.cpp  MT2D_Container.h  MT2D_ContainerFile.h  MT2D_ContainerFilePath.h  aes.cpp  aes.h  ignore
MT2D/Cursor/: Cursor.cpp  Cursor.h
MT2D/File/: MT2D_File.h
MT2D/InputBox/: MT2D_InputBox_Integer.cpp  MT2D_InputBox_Password.cpp  MT2D_InputBox_Password.h  MT2D_InputBox_String.cpp
MT2D/Joystick/: MT2D_Joystick.cpp  MT2D_Joystick.h
MT2D/MessageBox/: MT2D_MessageBox.cpp  MT2D_MessageBox_With_Result.cpp
MT2D/ObjectCore/: ColisionSystem.h  Coordinates.h  Cscript.cpp  Cscript.h  Object.cpp  Object.h  STDContainer.cpp  STDContainer.h  STDFunctions.cpp  STDFunctions.h  SpriteBlock.cpp  SpriteBlock.h  Sprites.cpp  Sprites.h  State.cpp  State.h  Vars.cpp  Vars.h
MT2D/ObjectCore/Compiler/: AbstractObject.h  CScriptTable.h  LineProcessor.h  ObjectCompiler.cpp  ObjectCompiler.h  RawObject.h
MT2D/SDL/: MT2D_SDL_Debug.cpp  MT2D_SDL_Debug.h  MT2D_SDL_Defines.cpp  MT2D_SDL_Event_Handler.cpp  MT2D_SDL_Event_Handler.h  MT2D_SDL_Redefine.cpp  MT2D_SDL_Redefine.h  MT2D_SDL_System_Calls.cpp  MT2D_SDL_System_Calls.h  MT2D_SDL_main.cpp  MT2D_SDL_main.h
MT2D/SDL/Audio/: MT2D_SDL_Audio.cpp  (+3 more)
MT2D/_ANDROID/: MT2D_Droid_Cursor.cpp  MT2D_Droid_Cursor.h
MT2D/_LINUX/: MT2D_Linux_Cursor.cpp  MT2D_Linux_Cursor.h  MT2D_Linux_Init.cpp  MT2D_Linux_Init.h  MT2D_Linux_System_Calls.cpp  MT2D_Linux_System_Calls.h
MT2D/_MSDOS/: M2Cursor.cpp  M2Init.cpp  M2SysCal.cpp  MT2D_Dos_Cursor.cpp  MT2D_Dos_Cursor.h  MT2D_Dos_Init.cpp  MT2D_Dos_Init.h  MT2D_Dos_System_Calls.cpp  MT2D_Dos_System_Calls.h
MT2D/_WINDOWS/: MT2D_Win_Cursor.cpp  MT2D_Win_Cursor.h  MT2D_Win_Debug.cpp  MT2D_Win_Debug.h  MT2D_Win_Init.cpp  MT2D_Win_Init.h  MT2D_Win_System_Calls.cpp  MT2D_Win_System_Calls.h
MT2D/information/: MT2D_CREDITS.txt  README.txt
MessageBox/: MT2D_MessageBox.cpp  MT2D_MessageBox.h  MT2D_MessageBox_With_Result.cpp  MT2D_MessageBox_With_Result.h
ObjectCore/: Cscript.cpp  Cscript.h  Functions.cpp  Functions.h  Object.cpp  Object.h  STDFunctions.cpp  STDFunctions.h  SpriteBlock.cpp  SpriteBlock.h  Sprites.cpp  Sprites.h  State.cpp  State.h  Vars.cpp  Vars.h
ProjBuilder/: CMakeLists.txt
Render_Terminal/SDL_RENDER/: MT2D_SDL_Audio.cpp  MT2D_SDL_Audio.h  MT2D_SDL_Beep.cpp  MT2D_SDL_Defines.h  MT2D_SDL_Redefine.h  MT2D_SDL_main.cpp  MT2D_SDL_main.h
SDL/: MT2D_SDL_Defines.cpp  MT2D_SDL_Defines.h  MT2D_SDL_Event_Handler.cpp  MT2D_SDL_Event_Handler.h  MT2D_SDL_Redefine.cpp  MT2D_SDL_Redefine.h  MT2D_SDL_main.cpp  MT2D_SDL_main.h
SDL/Audio/: MT2D_SDL_Audio.cpp  MT2D_SDL_Beep.cpp
SDL/IO/: SDL_MT2D_Joystick.cpp  SDL_MT2D_Joystick.h  SDL_MT2D_Keyboard.cpp  SDL_MT2D_Keyboard.h
SDL/Render/: MT2D_SDL_Render.cpp  MT2D_SDL_Render.h
TestCase/ContainerTest/: main.cpp
Tools/UserInterface/: MT2D_Menu.cpp  MT2D_Menu.h  MT2D_UI_Transfer_File.cpp_(Deprecated).h  MT2D_UI_Transfer_File_(Deprecated).cpp
Tools/Video/: MT2D_Generic_Line.cpp
Tools/msdos/: readme.txt
information/: FUTURE.txt  MAIN.txt  SYSREQ.txt  TIPS.txt
(+43 files in other folders)
